# algorithms

./: .gitignore  README.md  main
ASR/: analise.ipynb  opensmile.ipynb  stt.ipynb
C/L2_Cmake/: CMakeLists.txt
C/L2_CmakeLib/: CMakeLists.txt
C/L2_Sorts/: CMakeLists.txt
C/L2_Sorts/src/: bubble_sort.c  insertion_sort.c  main.c  quick_sort.c
C/L3_DynLib/: CMakeLists.txt
C/L3_TrapezIntegration/: CMakeLists.txt
C/L4_Dijsktra/: CMakeLists.txt
C/L5_Astar/: main.c
C/L6_GameOfLife/: CMakeLists.txt
C/L6_GameOfLife/src/: main.c
CompPhysics/Lab1/: Ex1.1.ipynb  Ex1.1.py  Ex1.ipynb  Ex1.py
CompPhysics/Lab3/: lab3.py  zad3.2.1.ipynb
CompPhysics/Lab4/: z4.1.ipynb  z4.1.py
CompPhysics/Lab5/: z5.1.ipynb
CompPhysics/Lab6/: z6.ipynb
CompPhysics/Lab7/: Lab7.ipynb
CompPhysics/Lab8/: ex8.ipynb
CompPhysics/Lab9/: ex9.ipynb
DL/Lab1/: MLP_XOR.ipynb  logitXOR.ipynb  perceptronXOR.ipynb
DL/Lab10/: LIME.ipynb  PDP.ipynb  PFI.ipynb
DL/Lab11/: lightning.ipynb
DL/Lab3/: mnist.ipynb
DL/Lab4/: various-nn-shapes.ipynb
DL/Lab8/: .gitignore  CustomSpeachDataset.py  Ensemble.py  SpeachClassifierModel.py  augmentation_experiments.ipynb  augmentations.py  compare_ensembles.ipynb  dataset_preprocessing.ipynb  eval.ipynb  hyperparameters_optim.ipynb  optim_train_dataset_size.ipynb  training.ipynb  training_augmented.ipynb
DL/Lab9/: ex1.ipynb
DL/Playground/: batch_size_losses.csv  lin_regression.ipynb  mnist_different_batch_size.ipynb  mnist_ultimate_optuna.ipynb  optimizers-comparison.ipynb  sin.ipynb
ML/: README.md
Playground/: biomaterials.ipynb  biomaterials2.ipynb  biomaterials3.ipynb
(+258 files in other folders)
